bookmark url 따로 만듦
base.html을 만들고 초기화면인 home.html을 extend해서 만듦

또한, 나머지 APP들의 html을 base.html의 content에 넣고,

template에 url을 수정

--- a/templates/bookmark/bookmark_list.html
+++ b/templates/bookmark/bookmark_list.html
@@ -1,17 +1,16 @@
-<html>
-<head>
-    <title>Django Bookmark list</title>
-</head>
+{% extends "base.html" %}
 
-<body>
+{% block title %}Django Bookmark List{% endblock %}
+
+{% block content %}
 <div id="content">
-    <h>Bookmark List</h>
+    <h1>Bookmark List</h1>
 
     <ul>
         {% for bookmark in object_list %}
-            <li><a href="{% url 'detail' bookmark.id %}">{{ bookmark }}</a></li>
+            {# bookmark:detail로 이동하고, bookmark.id를 인자로 넘겨줌 #}
+            <li><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark }}</a></li>
         {% endfor %}
     </ul>
 </div>
-</body>
-</html>
+{% endblock %}
