--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,20 +1,28 @@
-<h2>{{ object.title }}</h2>
+{% extends "base.html" %}
 
-<p class="other_posts">
-    {% if object.get_previous_by_modify_date %}
-    <a href="{{ object.get_previous_post.get_absolute_url }}"
-       title="View previous Post"> &laquo;--{{ object.get_previous_post }}</a> <!--laquo:HTML 특수문자 <<-->
-    {% endif %}
+{% block title %}post_detail.html{% endblock %}
 
-    {% if object.get_next_by_modify_date %}
-    | <a href="{{ object.get_next_post.get_absolute_url }}"
-         title="View next post">{{ object.get_next_post }}--&raquo;</a>
-    {% endif %}
-</p>
+{% block content %}
+<div id="content">
+    <h2>{{ object.title }}</h2>
 
-<p class="date">{{ object.modify_date|date:"j F Y" }}</p>
-<br/>
+    <p class="other_posts">
+        {% if object.get_previous_by_modify_date %}
+        <a href="{{ object.get_previous_post.get_absolute_url }}"
+           title="View previous Post"> &laquo;--{{ object.get_previous_post }}</a> <!--laquo:HTML 특수문자 <<-->
+        {% endif %}
 
-<div class="body">
-    {{ object.content|linebreaks }}
+        {% if object.get_next_by_modify_date %}
+        | <a href="{{ object.get_next_post.get_absolute_url }}"
+             title="View next post">{{ object.get_next_post }}--&raquo;</a>
+        {% endif %}
+    </p>
+
+    <p class="date">{{ object.modify_date|date:"j F Y" }}</p>
+    <br/>
+
+    <div class="body">
+        {{ object.content|linebreaks }}
+    </div>
 </div>
+{% endblock %}
