--- a/templates/bookmark/bookmark_detail.html
+++ b/templates/bookmark/bookmark_detail.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <div id="content">
-        <hi> {{ object.title }}</hi>
+{% extends "base.html" %}
 
-        <ul>
-            <li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
-        </ul>
-    </div>
-</body>
-</html>
+{% block title %}post_all.html{% endblock %}
+
+{% block content %}
+<div id="content">
+    <h1> {{ object.title }}</h1>
+
+    <ul>
+        <li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
+    </ul>
+</div>
+{% endblock %}
