--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
         </tr>
 
         <tr>
-            <td><b><i><a href="#">Photo</a></i></b></td>
+            <td><b><i><a href="{% url 'photo:index' %}">Photo</a></i></b></td>
             <td>You can write your own post and share to others.
                 Donec id elit non miporta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo</td>
             <td class="Edit"><i><a href="#">Add</a></i></td>
